--- a/SunShine.Web/Views/Shared/_Layout.cshtml
+++ b/SunShine.Web/Views/Shared/_Layout.cshtml
@@ -32,22 +32,22 @@
             });
         });
 
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?a0c5bb60978d1e0cf6a285266591a228";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
+        //var _hmt = _hmt || [];
+        //(function () {
+        //    var hm = document.createElement("script");
+        //    hm.src = "https://hm.baidu.com/hm.js?a0c5bb60978d1e0cf6a285266591a228";
+        //    var s = document.getElementsByTagName("script")[0];
+        //    s.parentNode.insertBefore(hm, s);
+        //})();
 
     </script>
 
 
 </head>
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261169669'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1261169669' type='text/javascript'%3E%3C/script%3E"));</script>
+@*<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261169669'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1261169669' type='text/javascript'%3E%3C/script%3E"));</script>*@
 <body>
 
-    <script src="http://stat.xiaonaodai.com/stat.php?id=11192140" language="JavaScript" type="text/javascript"></script>
+    @*<script src="http://stat.xiaonaodai.com/stat.php?id=11192140" language="JavaScript" type="text/javascript"></script>*@
 
         <div class="header hidden-xs">
             <div class="top">
