--- a/SunShine.Web/Css/Bootstrap/style.css
+++ b/SunShine.Web/Css/Bootstrap/style.css
@@ -319,7 +319,6 @@ hr {
 .cp_left {
     width: 245px;
     float: left;
-    background-color: #f5f5f5;
 }
 
     .cp_left .cp_list2 ul {
@@ -517,9 +516,10 @@ hr {
 
         .cp_list1 ul li {
             width: 346px;
-            height: 319px;
             margin: 45px 0 0 40px;
             float: left;
+            position: relative;
+            z-index:10;
         }
 
             .cp_list1 ul li:nth-child(odd) {
@@ -527,24 +527,37 @@ hr {
             }
 
             .cp_list1 ul li .cp_img {
-                width: 357px;
+             
                 height: 247px;
                 border: #c9c9c9 solid 1px;
                 overflow: hidden;
+                z-index:100;
+            }
+
+            .cp_list1 ul li .cp_bottom {
+                width:100%;
+                opacity: 0.35;
+                filter: alpha(opacity=50);
+                height: 50px;
+                border: #c9c9c9 solid 1px;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                background-color:#c9c9c9;
+                z-index:1000;
             }
 
 .cp_name {
-    width: 357px;
-    height: 28px;
-    line-height: 28px;
-    background-color: #fff;
-    font-size: 14px;
+    width: 220px;
+    padding:10px 0;
+    font-size: 22px;
     overflow: hidden;
     text-align: center;
+    float:left;
 }
 
     .cp_name a {
-        color: #333;
+        color: #FFFFFF;
         text-align: center;
         display: block;
         font-weight: bold;
@@ -648,6 +661,7 @@ hr {
 .ckxq {
     width: 300px;
     margin: 0 30px;
+    float:right;
 }
 
 .ckxq_left {
@@ -706,12 +720,12 @@ hr {
     }
 
 .ckxq_ljzx {
-    height: 30px;
-    line-height: 28px;
+    height: 26px;
+    line-height: 26px;
     background-color: #F4F1EA;
     border: 1px solid #da251c;
     font-size: 15px;
-    width: 124px;
+    width: 90px;
     text-align: center;
     float: right;
     margin-top: 13px;
@@ -1681,7 +1695,7 @@ hr {
 }
 
 .view_detail_btn {
-        text-align: center;
+    text-align: center;
     float: left;
     width: 110px;
     padding: 2px 0;
