--- a/SunShine.Web/Views/Parts/LeftProductCategory.cshtml
+++ b/SunShine.Web/Views/Parts/LeftProductCategory.cshtml
@@ -27,7 +27,7 @@
             <ul name="menu5" id="menu5" class="menu">
 
                 @if (usageCategories != null && usageCategories.Count > 0) {
-                    <li style="background-color:#383431;">
+                    <li style="background-color:#383431;margin-top:20px;">
                             
                             <img class="expandedImg" src="~/Images/home/baijiantou_1.jpg"  />
                             <div class="hd" >
@@ -36,16 +36,16 @@
                             </div>
                        
                         <ul id="menu" style="display: block;">
-                            <div style="width:243px;height:5px;background:#fff"></div>
+                            <div style="height:5px;background:#fff"></div>
                             @for (int i = 0; i < usageCategories.Count; i++) {
                                 <li class="level1-li sub"><a href="@Url.Action("List","Product",new { categoryCode=usageCategories[i].categorycode})" class="level1-a">@usageCategories[i].categoryname</a></li>
                             }
-                            <div style="width:243px;height:10px;background:#fff"></div>
+                            <div style="height:10px;background:#fff"></div>
                         </ul>
                     </li>
                 }
                 @if (industryCategories != null && industryCategories.Count > 0) {
-                    <li style="background-color:#383431;">
+                    <li style="background-color:#383431;margin-top:20px;">
                         <img class="expandedImg" src="~/Images/home/baijiantou_1.jpg" />
                         <div class="hd">
                             按行业分类
@@ -53,11 +53,11 @@
                         </div>
                         <!--  <div style="background-color:#FFF"><img src="/images/spacer.gif" width="220" height="1"></div>  -->
                         <ul id="menu" style="display: block;">
-                            <div style="width:243px;height:5px;background:#fff"></div>
+                            <div style="height:5px;background:#fff"></div>
                             @for (int i = 0; i < industryCategories.Count; i++) {
                                 <li class="level1-li sub"><a  href="@Url.Action("List","Product",new { categoryCode=industryCategories[i].categorycode})"  class="level1-a">@industryCategories[i].categoryname</a></li>
                             }
-                            <div style="width:243px;height:10px;background:#fff"></div>
+                            <div style="height:10px;background:#fff"></div>
                         </ul>
                     </li>
                 }
@@ -69,11 +69,11 @@
                             <div style="clear:both"></div>
                         </div>
                         <ul id="menu" style="display: block;">
-                            <div style="width:243px;height:5px;background:#fff"></div>
+                            <div style="height:5px;background:#fff"></div>
                            @for (int i = 0; i < productCategories.Count; i++) {
                             <li class="level1-li sub"><a  href="@Url.Action("List","Product",new { categoryCode=productCategories[i].categorycode})" class="level1-a">@productCategories[i].categoryname</a></li>
                            }
-                            <div style="width:243px;height:10px;background:#fff"></div>
+                            <div style="height:10px;background:#fff"></div>
 
                         </ul>
                     </li>
