--- a/SunShine.Web/Css/Bootstrap/style.css
+++ b/SunShine.Web/Css/Bootstrap/style.css
@@ -444,8 +444,8 @@ hr {
         color: #FFF;
         font-size: 20px;
         font-weight: 500;
-        border-bottom: 2px solid #da251c;
         position: relative;
+        background:url(../../Images/layout/title_under_line.jpg) repeat-x bottom;
     }
 
         .cp_right .title ul {
@@ -723,13 +723,14 @@ hr {
     height: 26px;
     line-height: 26px;
     background-color: #F4F1EA;
-    border: 1px solid #da251c;
+    border: 1px solid #E15517;
     font-size: 15px;
     width: 90px;
     text-align: center;
     float: right;
     margin-top: 13px;
-    background: #da251c;
+    background: #E15517;
+        margin-right: 15px;
 }
 
     .ckxq_ljzx a {
