--- a/SunShine.Web/Views/Shared/_HistoryBannerPartial.cshtml
+++ b/SunShine.Web/Views/Shared/_HistoryBannerPartial.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     Layout = null;
 }
-<div style="width:1444px;margin:0px auto;">
-    <div class="picture_center"><img src="/Images/home/telephone_2.jpg"></div>
-    <br>
+<div class="img_more_width">
+    <img class="img" src="/Images/home/show_case_title.jpg">
 </div>
